--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p {
+            text_align: center;
+        }
+    </style>
 </head>
 <body>
     <p>Hello</p> 
     <p>Are you happy that I did this</p>
     <p>Yes I am</p>
+    <p>We can do this all day long</p> 
 </body>
 </html>
