--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         p {
-            text_align: center;
+            text-align: center;
         }
     </style>
 </head>
